search img mobil

--- a/static/css/_adaptive.scss
+++ b/static/css/_adaptive.scss
@@ -747,15 +747,15 @@
 
 // -------Общая информация о стационаре----------
 
-@media(max-width: 767px) {
+// @media(max-width: 767px) {
 
-.cards {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
+// .cards {
+//     display: flex;
+//     flex-direction: column;
+//     align-items: center;
+// }
 
-}
+// }
 
 // ----------------Запись на приём-------------
 
