sout gosuslugi mobil

--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -2531,7 +2531,8 @@ body {
             border-radius: 10px;
             background: $light_blue;
             box-shadow: 1px 1px 4px 0px rgba(0, 0, 0, 0.20);
-            width: 380px;
+            // width: 380px;
+            width: 31.7%;
             min-height: 106px;
             display: flex;
             justify-content: center;
