--- a/static/css/_adaptive.scss
+++ b/static/css/_adaptive.scss
@@ -812,5 +812,39 @@
         display: none !important;
     }
 }
+// ----------------------Портал ГОСУСЛУГИ---------
+@media(max-width: 767px) {
+    .page_gosuslugi_title {
+        font-size: 40px;
+    }
+    .page_gosuslugi_subtitle {
+        font-size: 25px;
+    }
 
 
+
+}
+// ----------------------Результаты СОУТ----------
+@media(max-width: 767px) {
+
+    .page_sout_title {
+        font-size: 40px;
+    }
+    .sout_block {
+        flex-wrap: wrap !important;
+        .sout_item {
+            width: 47% !important;
+        }
+    }
+}
+@media(max-width: 519px) {
+    .page_sout_title {
+        font-size: 30px !important;
+    }
+    .sout_block {
+        .sout_item {
+        font-size: 12px !important;
+        line-height: 18px !important;
+        }
+    }
+}
