--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2620,7 +2620,7 @@ body {
   background: #E5F2F4;
   -webkit-box-shadow: 1px 1px 4px 0px rgba(0, 0, 0, 0.2);
           box-shadow: 1px 1px 4px 0px rgba(0, 0, 0, 0.2);
-  width: 380px;
+  width: 31.7%;
   min-height: 106px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -3635,5 +3635,34 @@ body {
   }
   .prev, .next {
     display: none !important;
+  }
+}
+@media (max-width: 767px) {
+  .page_gosuslugi_title {
+    font-size: 40px;
+  }
+  .page_gosuslugi_subtitle {
+    font-size: 25px;
+  }
+}
+@media (max-width: 767px) {
+  .page_sout_title {
+    font-size: 40px;
+  }
+  .sout_block {
+    -ms-flex-wrap: wrap !important;
+        flex-wrap: wrap !important;
+  }
+  .sout_block .sout_item {
+    width: 47% !important;
+  }
+}
+@media (max-width: 519px) {
+  .page_sout_title {
+    font-size: 30px !important;
+  }
+  .sout_block .sout_item {
+    font-size: 12px !important;
+    line-height: 18px !important;
   }
 }/*# sourceMappingURL=style.css.map */
