--- a/static/css/_adaptive.scss
+++ b/static/css/_adaptive.scss
@@ -848,3 +848,21 @@
         }
     }
 }
+
+// -------------------Информация по правам пациентов------------
+@media(max-width: 519px) {
+    .page_information_reminder {
+        display: flex !important;
+        flex-direction: column !important;
+        align-items: center !important;
+        .reminder_content {
+            display: flex !important;
+            flex-direction: column !important;
+            align-items: center !important;
+        }
+    }
+
+
+
+
+}
