--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2558,8 +2558,8 @@ body {
           box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.2);
   border-radius: 10px;
   width: 32%;
-  min-height: 106px;
-  padding: 0 20px;
+  height: 6em;
+  padding: 0 18px;
 }
 .page_information_container .insurance_organizations_block .block_item a {
   color: #000000;
@@ -2586,7 +2586,7 @@ body {
           box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.2);
   border-radius: 10px;
   width: 32%;
-  min-height: 106px;
+  height: 6em;
   padding: 0 20px;
 }
 .page_information_container .tabs_block .block_item a {
@@ -2884,17 +2884,43 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  gap: 14px;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   margin-bottom: 28px;
 }
 .display-flex-hospital .card-text-img {
-  max-width: 288px;
-  max-height: 192px;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 calc(25% - 14px);
+          flex: 0 1 calc(25% - 14px);
   -webkit-box-shadow: 1px 1px 4px 0px rgba(0, 0, 0, 0.2);
           box-shadow: 1px 1px 4px 0px rgba(0, 0, 0, 0.2);
   border-radius: 5px;
+  text-align: center;
+  position: relative;
+}
+.display-flex-hospital .card-text-img .depart_hospital_a {
+  text-decoration: none;
+  display: block;
 }
 .display-flex-hospital .card-text-img .depart_hospital_img {
   max-width: 100%;
+  height: auto;
+}
+.display-flex-hospital .card-text-img p {
+  position: absolute;
+  top: 70%;
+  left: 40%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%); /* Центрируем текст */
+  font-size: 16px;
+  margin: 0;
+  font-weight: 600;
+  font-size: 18px;
+  font-family: "OpenSans";
 }
 
 .info {
@@ -2939,15 +2965,6 @@ body {
 .card-text-img img {
   width: 100%;
   border-radius: 5px;
-}
-
-.card-text-img p {
-  padding-left: 14px;
-  font-weight: 600;
-  font-size: 18px;
-  font-family: "Open Sans";
-  position: relative;
-  margin-top: -82px;
 }
 
 .depart-travmpunkt .cards {
@@ -3467,11 +3484,11 @@ body {
   }
 }
 @media (max-width: 1034px) {
-  .block_item {
-    font-size: 14px;
-  }
   .administration_paycheck_item {
     width: 32% !important;
+  }
+  .administration_paycheck_item .block_item {
+    font-size: 14px;
   }
   .administration_paycheck {
     padding-left: 0 !important;
@@ -3673,6 +3690,21 @@ body {
     line-height: 18px !important;
   }
 }
+@media (max-width: 770px) {
+  .insurance_organizations_block .block_item, .tabs_block .block_item {
+    width: 48% !important;
+  }
+}
+@media (max-width: 767px) {
+  .page_information_title {
+    font-size: 40px !important;
+    line-height: normal !important;
+  }
+  .page_information_subtitle {
+    font-size: 25px !important;
+    line-height: normal !important;
+  }
+}
 @media (max-width: 519px) {
   .page_information_reminder {
     display: -webkit-box !important;
@@ -3697,5 +3729,20 @@ body {
     -webkit-box-align: center !important;
         -ms-flex-align: center !important;
             align-items: center !important;
+  }
+  .insurance_organizations_block, .tabs_block {
+    gap: 10px !important;
+  }
+  .insurance_organizations_block .block_item, .tabs_block .block_item {
+    font-size: 12px !important;
+  }
+}
+@media (max-width: 405px) {
+  .insurance_organizations_block .block_item, .tabs_block .block_item {
+    font-size: 10px !important;
+    height: 9em !important;
+  }
+  .insurance_organizations_block .block_item a, .tabs_block .block_item a {
+    padding: 10px 0px !important;
   }
 }/*# sourceMappingURL=style.css.map */
