--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1689,8 +1689,7 @@ body {
   border-top: 1px solid #DCDCDC;
   line-height: 25px;
   /* identical to box height */
-  -webkit-text-decoration-line: underline;
-          text-decoration-line: underline;
+  text-decoration-line: underline;
   color: #055D65;
   display: block;
 }
@@ -2915,7 +2914,8 @@ body {
   top: 70%;
   left: 40%;
   -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%); /* Центрируем текст */
+          transform: translate(-50%, -50%);
+  /* Центрируем текст */
   font-size: 16px;
   margin: 0;
   font-weight: 600;
@@ -3027,19 +3027,89 @@ body {
   overflow: hidden;
 }
 
+.header_mobile_menu .menu-item-has-children > .sub-menu {
+  display: none;
+}
+
+.header_mobile_menu .menu-item-has-children:hover > .sub-menu {
+  display: block;
+}
+
+.header_mobile_menu .sub-menu .menu-item-has-children > .sub-menu {
+  display: none;
+}
+
+.header_mobile_menu .sub-menu .menu-item-has-children:hover > .sub-menu {
+  display: block;
+}
+
+.header_mobile_menu {
+  display: none;
+}
+.header_mobile_menu .menu-item {
+  margin-left: 20px;
+  list-style: none;
+  line-height: 1.5;
+}
+.header_mobile_menu .sub-menu {
+  display: none;
+  margin-left: 10px;
+}
+.header_mobile_menu .sub-menu .sub-menu {
+  margin-left: 20px;
+}
+.header_mobile_menu .menu_link {
+  color: #ffffff;
+  font-size: 20px;
+  font-family: "OpenSans";
+}
+.header_mobile_menu .menu_list {
+  margin-top: 30px;
+}
+
+.menu_list .menu_item:hover .menu_link {
+  text-decoration: underline;
+  text-decoration-color: white;
+}
+
+.header_mobile_menu.active {
+  display: block;
+}
+
+.modal_burger {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(69, 166, 175, 0.9);
+  z-index: 999;
+  display: none;
+}
+.modal_burger .closemodal {
+  font-size: 30px;
+  color: #ffffff;
+  float: right;
+  margin-right: 20px;
+}
+
+.modal_burger .header_mobile_menu {
+  display: block;
+}
+
 @media (max-width: 1200px) {
   .header_container,
-.container {
+  .container {
     padding: 0px 10px;
   }
   .header_middle .header_container .site_identification .logo_text-link,
-.header_middle .header_container .site_identification .header_phone i,
-.header_middle .header_container .site_identification .header_phone-link,
-.header_middle .header_container .site_identification .visually_impaired-link {
+  .header_middle .header_container .site_identification .header_phone i,
+  .header_middle .header_container .site_identification .header_phone-link,
+  .header_middle .header_container .site_identification .visually_impaired-link {
     font-size: 16px;
   }
   .header_middle .header_container .site_identification .header_phone,
-.header_middle .header_container .site_identification .visually_impaired {
+  .header_middle .header_container .site_identification .visually_impaired {
     margin-left: 0;
   }
   .header_bottom .header_bottom_menu .menu_list {
@@ -3121,7 +3191,7 @@ body {
 }
 @media (max-width: 940px) {
   .other_right_column,
-.hospital_left_column {
+  .hospital_left_column {
     width: 50%;
   }
 }
