--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3417,19 +3417,32 @@ body {
     gap: 5px !important;
     margin: 0 8px !important;
   }
-  .departmens_body .hospital_left_column, .departmens_body .other_right_column {
+  .departmens_body .hospital_left_column,
+  .departmens_body .other_right_column {
     padding-bottom: 5px !important;
   }
-  .departmens_body .hospital_left_column .hospital_subtitle, .departmens_body .hospital_left_column .other_office_subtitle, .departmens_body .other_right_column .hospital_subtitle, .departmens_body .other_right_column .other_office_subtitle {
+  .departmens_body .hospital_left_column .hospital_subtitle,
+  .departmens_body .hospital_left_column .other_office_subtitle,
+  .departmens_body .other_right_column .hospital_subtitle,
+  .departmens_body .other_right_column .other_office_subtitle {
     margin: 10px 0 9px 5px !important;
   }
-  .departmens_body .hospital_left_column .hospital_subtitle .fanendoscope_img, .departmens_body .hospital_left_column .other_office_subtitle .fanendoscope_img, .departmens_body .other_right_column .hospital_subtitle .fanendoscope_img, .departmens_body .other_right_column .other_office_subtitle .fanendoscope_img {
+  .departmens_body .hospital_left_column .hospital_subtitle .fanendoscope_img,
+  .departmens_body .hospital_left_column .other_office_subtitle .fanendoscope_img,
+  .departmens_body .other_right_column .hospital_subtitle .fanendoscope_img,
+  .departmens_body .other_right_column .other_office_subtitle .fanendoscope_img {
     display: none;
   }
-  .departmens_body .hospital_left_column .hospital_items, .departmens_body .hospital_left_column .other_office_items, .departmens_body .other_right_column .hospital_items, .departmens_body .other_right_column .other_office_items {
+  .departmens_body .hospital_left_column .hospital_items,
+  .departmens_body .hospital_left_column .other_office_items,
+  .departmens_body .other_right_column .hospital_items,
+  .departmens_body .other_right_column .other_office_items {
     margin-left: 5px !important;
   }
-  .departmens_body .hospital_left_column .hospital_items li, .departmens_body .hospital_left_column .other_office_items li, .departmens_body .other_right_column .hospital_items li, .departmens_body .other_right_column .other_office_items li {
+  .departmens_body .hospital_left_column .hospital_items li,
+  .departmens_body .hospital_left_column .other_office_items li,
+  .departmens_body .other_right_column .hospital_items li,
+  .departmens_body .other_right_column .other_office_items li {
     margin-bottom: 10px !important;
   }
   .departmens_bottom {
@@ -3454,14 +3467,25 @@ body {
     font-weight: 400;
     line-height: normal;
   }
-  .departmens_title-link, .important_information_title-link, .news_title-link, .gallery_title-link, .contacts_title-link {
+  .departmens_title-link,
+  .important_information_title-link,
+  .news_title-link,
+  .gallery_title-link,
+  .contacts_title-link {
     font-size: 22px !important;
     margin: 25px 0px 10px 8px !important;
   }
-  .hospital_subtitle-link, .other_office_subtitle-link, .fa-brands {
+  .hospital_subtitle-link,
+  .other_office_subtitle-link,
+  .fa-brands {
     font-size: 16px !important;
   }
-  .hospital_items-link, .other_office_items-link, .news_posts_items-link, .adress_left, .adress_right, .contacts_departs {
+  .hospital_items-link,
+  .other_office_items-link,
+  .news_posts_items-link,
+  .adress_left,
+  .adress_right,
+  .contacts_departs {
     font-size: 14px;
   }
   .slider_background {
@@ -3515,7 +3539,8 @@ body {
   .about_title {
     font-size: 40px;
   }
-  .subtitle_top, .subtitle_bottom {
+  .subtitle_top,
+  .subtitle_bottom {
     font-size: 25px;
   }
   .block_row .block_item {
@@ -3579,7 +3604,8 @@ body {
   .administration_text {
     font-size: 14px !important;
   }
-  .administration_position_title, .administration_position_name {
+  .administration_position_title,
+  .administration_position_name {
     font-size: 22px !important;
   }
 }
@@ -3622,10 +3648,13 @@ body {
   }
 }
 @media (max-width: 1027px) {
-  .vacancies_contact_item_top, .vacancies_contact_item_down {
+  .vacancies_contact_item_top,
+  .vacancies_contact_item_down {
     font-size: 14px !important;
   }
-  .block1, .block2, .block3 {
+  .block1,
+  .block2,
+  .block3 {
     -webkit-box-pack: center !important;
         -ms-flex-pack: center !important;
             justify-content: center !important;
@@ -3670,7 +3699,9 @@ body {
   .requisites_title {
     font-size: 40px;
   }
-  .requisites_item_title, .requisites_item_subtitle, .requisites_item_text {
+  .requisites_item_title,
+  .requisites_item_subtitle,
+  .requisites_item_text {
     font-size: 14px !important;
   }
 }
@@ -3714,7 +3745,8 @@ body {
         -ms-flex-direction: column;
             flex-direction: column;
   }
-  .important2_title, .appointment_subtitle2 {
+  .important2_title,
+  .appointment_subtitle2 {
     font-size: 24px;
   }
 }
@@ -3727,7 +3759,8 @@ body {
   .reviews_title {
     font-size: 40px;
   }
-  .prev, .next {
+  .prev,
+  .next {
     display: none !important;
   }
 }
@@ -3761,7 +3794,8 @@ body {
   }
 }
 @media (max-width: 770px) {
-  .insurance_organizations_block .block_item, .tabs_block .block_item {
+  .insurance_organizations_block .block_item,
+  .tabs_block .block_item {
     width: 48% !important;
   }
 }
@@ -3800,19 +3834,23 @@ body {
         -ms-flex-align: center !important;
             align-items: center !important;
   }
-  .insurance_organizations_block, .tabs_block {
+  .insurance_organizations_block,
+  .tabs_block {
     gap: 10px !important;
   }
-  .insurance_organizations_block .block_item, .tabs_block .block_item {
+  .insurance_organizations_block .block_item,
+  .tabs_block .block_item {
     font-size: 12px !important;
   }
 }
 @media (max-width: 405px) {
-  .insurance_organizations_block .block_item, .tabs_block .block_item {
+  .insurance_organizations_block .block_item,
+  .tabs_block .block_item {
     font-size: 10px !important;
     height: 9em !important;
   }
-  .insurance_organizations_block .block_item a, .tabs_block .block_item a {
+  .insurance_organizations_block .block_item a,
+  .tabs_block .block_item a {
     padding: 10px 0px !important;
   }
 }/*# sourceMappingURL=style.css.map */
