--- a/static/css/_adaptive.scss
+++ b/static/css/_adaptive.scss
@@ -776,26 +776,16 @@
 
 // ----------------Запись на приём-------------
 @media(max-width: 767px) {
-    .appointment_title {
-        font-size: 40px;
+  .appointment_container {
+    h2 {
+        font-size: 35px !important;
     }
-    .important2_body {
-        display: flex;
-        flex-direction: column;
+    h3 {
+        font-size: 25px !important;
     }
-    .important2_title,
-    .appointment_subtitle2 {
-        font-size: 24px;
-    }
+  }
 }
 
-@media(max-width: 450px) {
-    .important2_img img {
-        // width: 100vw !important;
-        // min-width: 100vw !important;
-        width: 100%;
-    }
-}
 
 // ----------Отзывы----------
 @media(max-width: 630px) {
@@ -901,7 +891,7 @@
 
 @media(max-width: 1000px) {
     .announcement_body {
-        gap: 10px !important;
+        gap: 15px !important;
         .announcement_text {
             p { 
                 margin-top: 0 !important;
@@ -911,7 +901,8 @@
     }
     .important1 {
         .important1_body {
-            gap: 10px !important;  
+            gap: 15px !important;  
+            padding-bottom: 0 !important;
             .important1_text {
                 p {
                     padding-top: 0 !important;
@@ -920,6 +911,28 @@
             }
         }
     }
+    
+        .important2_body {
+            gap: 15px !important;  
+            padding-bottom: 0 !important;
+            .important2_text {
+                p {
+                    margin-top: 0 !important;
+                    font-size: 14px !important;
+                }
+            }
+        }
+        .important3_body {
+            gap: 15px !important;
+            padding-bottom: 10px !important;  
+            .important3_text {
+                p {
+                    padding-top: 0 !important;
+                    font-size: 14px !important;
+                }
+            }
+        }
+    
 }
 @media(max-width: 767px) {
     .page_news_top {
@@ -946,18 +959,40 @@
 
 
 @media(max-width: 560px) {
-    .announcement_body, .important1_body {
+    .announcement_body, .important1_body, .important2_body, .important3_body {
         display: flex;
         flex-direction: column !important;
         align-items: center !important;
-        .important1_img {
+        .important1_img, .important2_img {
             width: 100% !important;
             
+        }
+        .announcement_text {
+            p {
+                margin-bottom: 0!important;
+            }
         }
         .important1_text {
             div {
                 display: flex !important;
                 justify-content: center !important;
+                align-items: center !important;
+                a {
+                    margin-bottom: 10px !important;
+                }
+            }
+        }
+        .important3_text {
+            display: flex !important;
+            flex-direction: column !important;
+            justify-content: center !important;
+            p {
+                justify-content: center !important;
+            }
+            div {
+                display: flex !important;
+                flex-direction: column !important;
+                align-items: center !important;
             }
         }
     }
